fixed implementation of ServiceRegistry queryByIdSystemId endpoint and queryServiceRegistryByIdSystemId in OrchestratorService